[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Fonts/8-BitMadness.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/GameOverScreen.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/SFX/Death.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 96
outline_size = 2
outline_color = Color( 0, 0, 0, 0.670588 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="InputEventKey" id=3]
scancode = 82

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventKey" id=5]
scancode = 77

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventKey" id=7]
scancode = 81

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[node name="DeathScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 480, 270 )
color = Color( 0.47, 0, 0, 1 )
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": "The death screen appears when you die.
Preferably it should say that you can now play as Luigi, but this is enough."
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 464.0
margin_bottom = 254.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 448.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 448.0
margin_bottom = 238.0
size_flags_vertical = 3
alignment = 1

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 175.0
margin_top = 48.0
margin_right = 272.0
margin_bottom = 69.0
focus_neighbour_bottom = NodePath("../Menu")
focus_next = NodePath("../Menu")
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
shortcut_in_tooltip = false
action_mode = 0
shortcut = SubResource( 4 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 162.0
margin_top = 73.0
margin_right = 285.0
margin_bottom = 94.0
focus_neighbour_top = NodePath("../Restart")
focus_neighbour_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Restart")
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
shortcut_in_tooltip = false
action_mode = 0
shortcut = SubResource( 6 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 199.0
margin_top = 98.0
margin_right = 249.0
margin_bottom = 119.0
focus_neighbour_top = NodePath("../Menu")
focus_previous = NodePath("../Menu")
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
shortcut_in_tooltip = false
action_mode = 0
shortcut = SubResource( 8 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathJingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
